--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="zh-cn">
 <head>
 	<meta charset="gb2312" />
-	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+	<meta content="text/html; charset=gb2312" http-equiv="Content-Type" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-touch-fullscreen" content="yes" />
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<meta name="robots" content="nofollow,noindex,noarchive"/>
-<title>资料获取</title>
+<title>脳脢脕脧禄帽脠隆</title>
 <script type="text/javascript">
  location.href='https://v.youku.com/v_show/id_XNDU4Njk0MzAxMg==.html';
 </script>
@@ -18,7 +18,7 @@
 
 <body>
 
-<!--input type="button" onclick="disp_prompt()" value="获取资料" /--->
+<!--input type="button" onclick="disp_prompt()" value="禄帽脠隆脳脢脕脧" /--->
 </body>
 
 </html>
