--- a/v.html
+++ b/v.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html> <html> <head> <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" /> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0"/> <title>点播</title> </head> <body> <div id="id_video_container" style="width:100%; height:auto;"></div> 
 <script src="http://qzonestyle.gtimg.cn/open/qcloud/video/h5/h5connect.js" charset="utf-8"></script>
-<script src="media.js" charset="gb2312"></script>
+<script src="media.js" charset="utf-8"></script>
  <script>player_onload()</script>
