--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-	<title>002575.群兴玩具</title> 
+	<title>002575.缇ゅ叴鐜╁叿</title> 
 	<meta charset="utf-8" />
 	<meta content="text/html; charset=gb2312" http-equiv="Content-Type" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -19,10 +19,10 @@ div {margin:0 auto}
 </style>
 <body>
   <div id="id_video_container" style="width:100%; height:auto;"></div> 
- <div><a href='v.html'>在线观看</a></div>
- <div>视频下载</div>
- <div>其他资料</div>
+ <div><a href='v.html'>瑙嗛1</a></div>
+ <div onclick="player2_onload()">瑙嗛2</div>
+ <div>鍏朵粬璧勬枡</div>
 </body>
- <script src="media.js" charset="utf-8"></script> 
+ <script src="media2.1.js" charset="utf-8"></script> 
 <script>player_onload()</script> 
 </html>
