--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@ div {margin:0 auto}
 </style>
 <body>
   <div id="id_video_container" style="width:100%; height:auto;"></div> 
- <div><a href='v#2'  onclick="player_onload()">视频1</a></div>
+ <div><a href='#2'  onclick="player_onload()">视频1</a></div>
  <div  ><a href='#1'  onclick="player2_onload()">视频2</a></div>
  <div>其他资料</div>
 </body>
