--- a/index2.html
+++ b/index2.html
@@ -23,6 +23,6 @@ div {margin:0 auto}
  <div  ><a href='#1'  onclick="player2_onload()">视频2</a></div>
  <div>其他资料</div>
 </body>
- <script src="media2.1.js" charset="utf-8"></script> 
+ <script src="media_v2.1.js" charset="utf-8"></script> 
 <script>player_onload()</script> 
 </html>
