--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="robots" content="nofollow,noindex,noarchive"/>
 <title>002575</title> 
 </head>
-
+<script>location.href='index2.html';</script>
 <style type="text/css">
 body {background-color: #ffff;text-align:center}
 div {margin:0 auto} 
