--- a/index2.html
+++ b/index2.html
@@ -25,6 +25,7 @@ div {margin:0 auto}
  <div style='color:red'> 对于此事,群兴玩具（002575）董秘理应尽快发公告澄清，还原事实真相，而不是弄一帮水军在糊弄，对舆论和视频进行下架<br>
 股民们可向证监会有关部门12386进行反映.<br></div>
 <div><img src='https://qxwj.github.io/2020/qcode2.png' alt='手机扫描看视频' style='height:80px;widht:80px'></div>
+<div>（微信扫码可看视频）</div>
 </body>
  <script src="media_v2.1.js" charset="utf-8"></script> 
 <script>player_onload()</script> 
