--- a/index2.html
+++ b/index2.html
@@ -19,8 +19,8 @@ div {margin:0 auto}
 </style>
 <body>
   <div id="id_video_container" style="width:100%; height:auto;"></div> 
- <div><a href='v#2'  onclick="player1_onload()">视频1</a></div>
- <div  ><a href='#1'  onclick="player1_onload()">视频2</a></div>
+ <div><a href='#2'  onclick="player_onload()">视频1</a></div>
+ <div  ><a href='#1'  onclick="player2_onload()">视频2</a></div>
  <div>其他资料</div>
  <div style='color:red'> 对于此事,群兴玩具（002575）董秘理应尽快发公告澄清，还原事实真相，而不是弄一帮水军在糊弄，对舆论和视频进行下架<br>
 股民们可向证监会有关部门12386进行反映.<br></div>
